Code de-duplication in byteSize(double size)

Summary:
BUG: 384561
This code is used to pretty print the amount of data copied.
Replace this duplicated code by calling formatByteSize from KFormat.

Test Plan:

Reviewers: #frameworks, mwolff

Reviewed By: mwolff

Subscribers: ngraham, cfeck, mwolff, broulik

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D9770